# LLTI

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Critique of OrderBook.txt  GEMINI.md  OrderBook_critic.txt  README.md  benchmark_c7i.sh
Orderbook/: OrderBook1.cpp  OrderBook2.cpp  OrderBook3.cpp  OrderBook4.cpp  OrderBook5.cpp  OrderBook6.cpp  OrderBook_Story.md  htop_hwloc_redlineRRM.txt  htop_hwloc_redlineRRM_story.md
benchmark_tests/: benchmarks.md
benchmarks/: lookup_benchmark.cpp
include/llti/: eytzinger_lookup.h  sorted_lookup.h  veb_lookup.h
src/: main.cpp
tests/: eytzinger_test.cpp  lookup_test.cpp  veb_test.cpp
